<resources>
    <string name="app_name">androidWeather</string>
    <string name="input_address">Input Address:</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="state">State</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="submit">Submit</string>
    <string name="title_activity_maps">Map</string>
    <string name="computing_weather">Computing weather...</string>
</resources>
